test(DATA-749): update test configuration