@@ -18,22 +18,20 @@ package no.rutebanken.marduk.routes.chouette;
 
 import no.rutebanken.marduk.Constants;
 import no.rutebanken.marduk.MardukRouteBuilderIntegrationTestBase;
-import org.apache.camel.EndpointInject;
-import org.apache.camel.Exchange;
-import org.apache.camel.Expression;
-import org.apache.camel.Produce;
-import org.apache.camel.ProducerTemplate;
+import org.apache.camel.*;
 import org.apache.camel.builder.AdviceWithRouteBuilder;
 import org.apache.camel.component.mock.MockEndpoint;
 import org.apache.camel.model.ModelCamelContext;
 import org.apache.camel.model.language.SimpleExpression;
-import org.apache.commons.io.IOUtils;
 import org.junit.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.boot.test.context.SpringBootTest;
 
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.Paths;
 import java.util.HashMap;
 import java.util.Map;
 
@@ -96,7 +94,7 @@ public class ChouetteExportGtfsFileMardukRouteIntegrationTest extends MardukRout
 		// Mock job polling route - AFTER header validatio (to ensure that we send correct headers in test as well
 		context.getRouteDefinition("chouette-validate-job-status-parameters").adviceWith(context, new AdviceWithRouteBuilder() {
 			@Override
-			public void configure() throws Exception {
+			public void configure()  {
 				interceptSendToEndpoint("direct:checkJobStatus").skipSendToOriginalEndpoint()
 				.to("mock:pollJobStatus");
 			}
@@ -104,7 +102,7 @@ public class ChouetteExportGtfsFileMardukRouteIntegrationTest extends MardukRout
 
 		context.getRouteDefinition("chouette-get-job-status").adviceWith(context, new AdviceWithRouteBuilder() {
 			@Override
-			public void configure() throws Exception {
+			public void configure() {
 				interceptSendToEndpoint(chouetteUrl+ "/chouette_iev/referentials/rut/jobs/1/data")
 						.skipSendToOriginalEndpoint().to("mock:chouetteGetData");
 
@@ -112,7 +110,7 @@ public class ChouetteExportGtfsFileMardukRouteIntegrationTest extends MardukRout
 		});
 
 		
-		chouetteGetData.expectedMessageCount(1);
+		chouetteGetData.expectedMessageCount(0);
 		chouetteGetData.returnReplyBody(new Expression() {
 
 			@SuppressWarnings("unchecked")
@@ -120,11 +118,8 @@ public class ChouetteExportGtfsFileMardukRouteIntegrationTest extends MardukRout
 			public <T> T evaluate(Exchange ex, Class<T> arg1) {
 				try {
 					// Should be GTFS contnet
-					return (T) IOUtils.toString(getClass()
-							.getResourceAsStream("/no/rutebanken/marduk/chouette/getActionReportResponseOK.json"));
+					return (T) Files.readString(Paths.get("/no/rutebanken/marduk/chouette/getActionReportResponseOK.json"), StandardCharsets.UTF_8);
 				} catch (IOException e) {
-					// TODO Auto-generated catch block
-					e.printStackTrace();
 					return null;
 				}
 			}
@@ -157,8 +152,9 @@ public class ChouetteExportGtfsFileMardukRouteIntegrationTest extends MardukRout
 		Exchange exchange = pollJobStatus.getReceivedExchanges().get(0);
 		exchange.getIn().setHeader("action_report_result", "OK");
 		exchange.getIn().setHeader("data_url", chouetteUrl+ "/chouette_iev/referentials/rut/jobs/1/data");
+		exchange.getIn().setHeader(GTFS_EXPORT_GLOBAL, Boolean.FALSE);
 		processExportResultTemplate.send(exchange );
-		
+
 		chouetteGetData.assertIsSatisfied();
 		updateStatus.assertIsSatisfied();
 
